# openai-sdk-multi-agentic-workflow

./: .env.example  .gitignore  AGENT_WORKFLOW_EXPLAINED.md  DEEP_RESEARCH_SUMMARY.md  FIX_README.md  ISSUE_RESOLVED.md  MODEL_CONFIGURATION.md  PROJECT_OVERVIEW.md  QUICK_START_GMAIL.md  README.md  TEST_RESULTS.md  TROUBLESHOOTING_500_ERROR.md  config.py  guardrails.py  openai_sdk_agent.py  openai_sdk_agent_with_guardrails.py  package-lock.json  pyproject.toml  requirements.txt  send_professional_emails.py  setup.ps1  start-all.bat  start-all.ps1  start-api-server.ps1  start-backend.bat  start-research-agent.ps1  stop-research-agent.ps1
deep_research/: FRONTEND_COMPLETE.md  NEXTJS_FRONTEND_PLAN.md  README.md  TRACING_FIXED.md  __init__.py  api_server.py  app.py  examples.py  langsmith_config.py  report_formatter.py  requirements.txt  research_manager.py  sdk_imports.py  verify_langsmith.py
deep_research/agents/: __init__.py  email_agent.py  planner_agent.py  search_agent.py  writer_agent.py
deep_research/docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  README.md
deep_research/frontend/: COMPLETE_SETUP_GUIDE.md  IMPLEMENTATION_GUIDE.md  PR_DESCRIPTION.md  README.md  REPORT_FORMATTING.md  SSE_TRANSFORMATION_FIXES.md  UI_REFRESH_SUMMARY.md  next.config.js  package-lock.json  package.json  setup.ps1  (+1 more)
docs/: COMMENTS_ADDED.md  GIT_PUSH_SUCCESS_GMAIL.md  GMAIL_IMPLEMENTATION.md  GUARDRAILS.md  GUARDRAILS_IMPLEMENTATION_SUMMARY.md  GUARDRAILS_QUICK_REF.md  INDEX.md  INSTALLATION_SUCCESS.md  QUICK_REFERENCE.md  SETUP.md
email_sender/: README.md  SETUP_GUIDE.md  __init__.py  config.py  email_templates.py  exceptions.py  gmail_sender.py  guardrails_email.py  validators.py
tests/: README.md  test_gmail.py  test_guardrails_basic.py  test_guardrails_gmail.py  test_integration.py  test_sales_email.py
(+159 files in other folders)
